--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
             </div>
             <div class="row footer">
                 <div class="col-12">
-                    <p>© 2024 codial.com</p>
+                    <p>© 2024 shirin.com</p>
                 </div>
             </div>
         </div>
