--- a/templates/talks.html
+++ b/templates/talks.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row">
                 <p>
-                    &copy; 2024 azimjon.com
+                    &copy; 2024 shirin.com
                 </p>
             </div>
         </div>
