--- a/templates/blog.html
+++ b/templates/blog.html
@@ -43,7 +43,7 @@
             {% endfor %}
             <div class="col-12 col-md-6 col-sm-6 main-card2">
                 <h4>NEWSLETTER</h4>
-                <p>Subscribe to <a href="#">@codialuz</a> telegram channel where I share interesting & useful stuff.</p>
+                <p>Subscribe to <a href="https://t.me/+nXuTdMB9Qss3OTYy">Ak_Shirin Portfolio</a>/p>
 
             </div>
         </div>
